--- a/react/public/index.html
+++ b/react/public/index.html
@@ -5,10 +5,9 @@
     <meta name="description" content="React with Server Components demo">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
-
     <link rel="stylesheet" href="assets/css/bundle.css" />
 
-    <title>React Notes</title>
+    <title>Contact Book</title>
   </head>
   <body>
     <div id="root"></div>
