--- a/react/public/index.html
+++ b/react/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Contact Book</title>
     <meta charset="utf-8" />
     <meta name="description" content="React with Server Components demo">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="assets/css/bundle.css" />
+    <link rel="stylesheet" href="/style.css" />
 
-    <title>Contact Book</title>
   </head>
   <body>
     <div id="root"></div>
